# realcugan-ncnn-tauri

./: .eslintrc.json  README.md  package.json  vite.config.js
.github/workflows/: publish-to-auto-release.yml
src/: app.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  realcugan.rs  task.rs
src/modules/real/: mod.vue
src/plugins/: vuetify.js
src/plugins/dark/: index.js
src/services/: http.js
