[package]
name = "realcugan-ncnn-tauri"
version = "0.2.2"
description = "A Tauri App for realcugan-ncnn"
authors = ["kutake"]
license = ""
repository = ""
default-run = "realcugan-ncnn-tauri"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
sentry-tauri = "0.2"
serde_json = "1.0"
log = "^0.4"
async-process = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = [ "shell-open", "updater", "window-show", "window-unminimize", "window-hide", "window-start-dragging", "window-unmaximize", "window-set-fullscreen", "window-minimize", "window-maximize", "window-close", "window-set-min-size", "protocol-asset", "fs-read-dir", "fs-read-file", "fs-exists", "fs-write-file", "fs-create-dir", "shell-execute", "path-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
futures-lite = "2.1.0"
window-shadows = "0.2.2"
winapi = "0.3.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
